overlays/prd/resources/crider-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crider-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crider-backend
  template:
    metadata:
      labels:
        app: crider-backend
    spec:
      containers:
        - name: crider-backend
          image: 795149720653.dkr.ecr.ap-northeast-2.amazonaws.com/aws-ecr-development-crider-service:latest
          ports:
            - containerPort: 8000
