overlays/prd/resources/crider-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crider-service
  namespace: default
spec:
  selector:
    app: crider-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
